поставил ном кодировку

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>git Урок 2</title>
+	<title>git РЈСЂРѕРє 2</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content=""/>
 	<meta name="keywords" content="" />
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-		<p>новое изменение</p>
-		<p>еще текст</p>
+		<p>РЅРѕРІРѕРµ РёР·РјРµРЅРµРЅРёРµ</p>
+		<p>РµС‰Рµ С‚РµРєСЃС‚</p>
 </body>
 </html>
